--- a/Netflix/Netflix Database.ipynb
+++ b/Netflix/Netflix Database.ipynb
@@ -8,8 +8,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the following Notebook we are going to explore the Netflix dataset downloaded from Kaggle. \n",
+    "*The aim of this notebook is to create a model that can predict the clusters of the films according to different features.* For instance, we want to **classify in clusters the films and series (in separate ways) considering the actors, countries and directors and figure out if each clusters may be similar to the different genres.**\n",
+    "\n",
+    "+ Firstly, we are going to split the dataset between movies and series.\n",
+    "\n",
+    "+ Secondly, we are goint to wor with the features, encoding and proccesing them.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,16 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pandas.read_csv('netflix_titles.csv/netflix_titles.csv')"
+    "data = pandas.read_csv('netflix_dataset.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +214,7 @@
        "4  When nerdy high schooler Dani finally attracts...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,10 +225,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6234, 12)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split Dataset"
+   ]
   },
   {
    "cell_type": "code",
@@ -274,8 +306,11 @@
   },
   "toc": {
    "base_numbering": 1,
-   "nav_menu": {},
-   "number_sections": true,
+   "nav_menu": {
+    "height": "53px",
+    "width": "200px"
+   },
+   "number_sections": false,
    "sideBar": true,
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
