--- a/Netflix/Netflix Database.ipynb
+++ b/Netflix/Netflix Database.ipynb
@@ -21,17 +21,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy\n",
-    "import pandas\n",
-    "import seaborn\n",
     "import scipy\n",
-    "from scipy import stats"
+    "from scipy import stats\n",
+    "\n",
+    "#librerías necesarias:\n",
+    "\n",
+    "# Data handling\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "# Clustering\n",
+    "from sklearn.cluster import KMeans, DBSCAN\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn.metrics import silhouette_score\n",
+    "\n",
+    "# Dimensionality reduction\n",
+    "from sklearn.manifold import TSNE\n",
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "# Visualization\n",
+    "import seaborn as sns\n",
+    "#import plotly.express as px\n",
+    "import matplotlib.pyplot as plt\n",
+    "import mpl_toolkits.mplot3d.axes3d as p3\n",
+    "from matplotlib import animation\n",
+    "\n",
+    "%matplotlib inline "
    ]
   },
   {
@@ -43,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +72,254 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City1</th>\n",
+       "      <th>City2</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Passenger_Trips</th>\n",
+       "      <th>Aircraft_Trips</th>\n",
+       "      <th>Passenger_Load_Factor</th>\n",
+       "      <th>Distance_GC_(km)</th>\n",
+       "      <th>RPKs</th>\n",
+       "      <th>ASKs</th>\n",
+       "      <th>Seats</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Month_num</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ADELAIDE</td>\n",
+       "      <td>ALICE SPRINGS</td>\n",
+       "      <td>30682</td>\n",
+       "      <td>15743</td>\n",
+       "      <td>143</td>\n",
+       "      <td>81.8</td>\n",
+       "      <td>1316</td>\n",
+       "      <td>20717788.0</td>\n",
+       "      <td>25327369.0</td>\n",
+       "      <td>19246</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ADELAIDE</td>\n",
+       "      <td>BRISBANE</td>\n",
+       "      <td>30682</td>\n",
+       "      <td>3781</td>\n",
+       "      <td>32</td>\n",
+       "      <td>89.8</td>\n",
+       "      <td>1622</td>\n",
+       "      <td>6132782.0</td>\n",
+       "      <td>6829379.0</td>\n",
+       "      <td>4210</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ADELAIDE</td>\n",
+       "      <td>CANBERRA</td>\n",
+       "      <td>30682</td>\n",
+       "      <td>1339</td>\n",
+       "      <td>12</td>\n",
+       "      <td>94.7</td>\n",
+       "      <td>972</td>\n",
+       "      <td>1301508.0</td>\n",
+       "      <td>1374348.0</td>\n",
+       "      <td>1414</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ADELAIDE</td>\n",
+       "      <td>DARWIN</td>\n",
+       "      <td>30682</td>\n",
+       "      <td>3050</td>\n",
+       "      <td>33</td>\n",
+       "      <td>66.8</td>\n",
+       "      <td>2619</td>\n",
+       "      <td>7987950.0</td>\n",
+       "      <td>11958009.0</td>\n",
+       "      <td>4566</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ADELAIDE</td>\n",
+       "      <td>GOLD COAST</td>\n",
+       "      <td>30682</td>\n",
+       "      <td>1596</td>\n",
+       "      <td>16</td>\n",
+       "      <td>88.5</td>\n",
+       "      <td>1607</td>\n",
+       "      <td>2564772.0</td>\n",
+       "      <td>2898047.0</td>\n",
+       "      <td>1803</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      City1          City2  Month  Passenger_Trips  Aircraft_Trips  \\\n",
+       "0  ADELAIDE  ALICE SPRINGS  30682            15743             143   \n",
+       "1  ADELAIDE       BRISBANE  30682             3781              32   \n",
+       "2  ADELAIDE       CANBERRA  30682             1339              12   \n",
+       "3  ADELAIDE         DARWIN  30682             3050              33   \n",
+       "4  ADELAIDE     GOLD COAST  30682             1596              16   \n",
+       "\n",
+       "  Passenger_Load_Factor  Distance_GC_(km)        RPKs        ASKs  Seats  \\\n",
+       "0                  81.8              1316  20717788.0  25327369.0  19246   \n",
+       "1                  89.8              1622   6132782.0   6829379.0   4210   \n",
+       "2                  94.7               972   1301508.0   1374348.0   1414   \n",
+       "3                  66.8              2619   7987950.0  11958009.0   4566   \n",
+       "4                  88.5              1607   2564772.0   2898047.0   1803   \n",
+       "\n",
+       "   Year  Month_num  \n",
+       "0  1984          1  \n",
+       "1  1984          1  \n",
+       "2  1984          1  \n",
+       "3  1984          1  \n",
+       "4  1984          1  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6234, 12)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Movies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "films = data[data['type'] == 'Movie']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TV Series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tv_series = data[data['type'] == 'TV Show']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((4265, 12), (1969, 12))"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Shape Datasets\n",
+    "\n",
+    "films.shape, tv_series.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Movies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -122,36 +389,6 @@
        "      <td>Jandino Asporaat riffs on the challenges of ra...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>70234439</td>\n",
-       "      <td>TV Show</td>\n",
-       "      <td>Transformers Prime</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Peter Cullen, Sumalee Montano, Frank Welker, J...</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>September 8, 2018</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>TV-Y7-FV</td>\n",
-       "      <td>1 Season</td>\n",
-       "      <td>Kids' TV</td>\n",
-       "      <td>With the help of three human allies, the Autob...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>80058654</td>\n",
-       "      <td>TV Show</td>\n",
-       "      <td>Transformers: Robots in Disguise</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Will Friedle, Darren Criss, Constance Zimmer, ...</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>September 8, 2018</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>TV-Y7</td>\n",
-       "      <td>1 Season</td>\n",
-       "      <td>Kids' TV</td>\n",
-       "      <td>When a prison ship crash unleashes hundreds of...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>80125979</td>\n",
        "      <td>Movie</td>\n",
@@ -166,110 +403,92 @@
        "      <td>Comedies</td>\n",
        "      <td>When nerdy high schooler Dani finally attracts...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>70304989</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Automata</td>\n",
+       "      <td>Gabe Ibáñez</td>\n",
+       "      <td>Antonio Banderas, Dylan McDermott, Melanie Gri...</td>\n",
+       "      <td>Bulgaria, United States, Spain, Canada</td>\n",
+       "      <td>September 8, 2017</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>R</td>\n",
+       "      <td>110 min</td>\n",
+       "      <td>International Movies, Sci-Fi &amp; Fantasy, Thrillers</td>\n",
+       "      <td>In a dystopian future, an insurance adjuster f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>80164077</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Fabrizio Copano: Solo pienso en mi</td>\n",
+       "      <td>Rodrigo Toro, Francisco Schultz</td>\n",
+       "      <td>Fabrizio Copano</td>\n",
+       "      <td>Chile</td>\n",
+       "      <td>September 8, 2017</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>TV-MA</td>\n",
+       "      <td>60 min</td>\n",
+       "      <td>Stand-Up Comedy</td>\n",
+       "      <td>Fabrizio Copano takes audience participation t...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    show_id     type                                    title  \\\n",
-       "0  81145628    Movie  Norm of the North: King Sized Adventure   \n",
-       "1  80117401    Movie               Jandino: Whatever it Takes   \n",
-       "2  70234439  TV Show                       Transformers Prime   \n",
-       "3  80058654  TV Show         Transformers: Robots in Disguise   \n",
-       "4  80125979    Movie                             #realityhigh   \n",
+       "    show_id   type                                    title  \\\n",
+       "0  81145628  Movie  Norm of the North: King Sized Adventure   \n",
+       "1  80117401  Movie               Jandino: Whatever it Takes   \n",
+       "4  80125979  Movie                             #realityhigh   \n",
+       "6  70304989  Movie                                 Automata   \n",
+       "7  80164077  Movie       Fabrizio Copano: Solo pienso en mi   \n",
        "\n",
-       "                   director  \\\n",
-       "0  Richard Finn, Tim Maltby   \n",
-       "1                       NaN   \n",
-       "2                       NaN   \n",
-       "3                       NaN   \n",
-       "4          Fernando Lebrija   \n",
+       "                          director  \\\n",
+       "0         Richard Finn, Tim Maltby   \n",
+       "1                              NaN   \n",
+       "4                 Fernando Lebrija   \n",
+       "6                      Gabe Ibáñez   \n",
+       "7  Rodrigo Toro, Francisco Schultz   \n",
        "\n",
        "                                                cast  \\\n",
        "0  Alan Marriott, Andrew Toth, Brian Dobson, Cole...   \n",
        "1                                   Jandino Asporaat   \n",
-       "2  Peter Cullen, Sumalee Montano, Frank Welker, J...   \n",
-       "3  Will Friedle, Darren Criss, Constance Zimmer, ...   \n",
        "4  Nesta Cooper, Kate Walsh, John Michael Higgins...   \n",
+       "6  Antonio Banderas, Dylan McDermott, Melanie Gri...   \n",
+       "7                                    Fabrizio Copano   \n",
        "\n",
        "                                    country         date_added  release_year  \\\n",
        "0  United States, India, South Korea, China  September 9, 2019          2019   \n",
        "1                            United Kingdom  September 9, 2016          2016   \n",
-       "2                             United States  September 8, 2018          2013   \n",
-       "3                             United States  September 8, 2018          2016   \n",
        "4                             United States  September 8, 2017          2017   \n",
+       "6    Bulgaria, United States, Spain, Canada  September 8, 2017          2014   \n",
+       "7                                     Chile  September 8, 2017          2017   \n",
        "\n",
-       "     rating  duration                           listed_in  \\\n",
-       "0     TV-PG    90 min  Children & Family Movies, Comedies   \n",
-       "1     TV-MA    94 min                     Stand-Up Comedy   \n",
-       "2  TV-Y7-FV  1 Season                            Kids' TV   \n",
-       "3     TV-Y7  1 Season                            Kids' TV   \n",
-       "4     TV-14    99 min                            Comedies   \n",
+       "  rating duration                                          listed_in  \\\n",
+       "0  TV-PG   90 min                 Children & Family Movies, Comedies   \n",
+       "1  TV-MA   94 min                                    Stand-Up Comedy   \n",
+       "4  TV-14   99 min                                           Comedies   \n",
+       "6      R  110 min  International Movies, Sci-Fi & Fantasy, Thrillers   \n",
+       "7  TV-MA   60 min                                    Stand-Up Comedy   \n",
        "\n",
        "                                         description  \n",
        "0  Before planning an awesome wedding for his gra...  \n",
        "1  Jandino Asporaat riffs on the challenges of ra...  \n",
-       "2  With the help of three human allies, the Autob...  \n",
-       "3  When a prison ship crash unleashes hundreds of...  \n",
-       "4  When nerdy high schooler Dani finally attracts...  "
+       "4  When nerdy high schooler Dani finally attracts...  \n",
+       "6  In a dystopian future, an insurance adjuster f...  \n",
+       "7  Fabrizio Copano takes audience participation t...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[:5]"
+    "films.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(6234, 12)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Split Dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
