Update Australia Domestic Flights.ipynb

--- a/Australia Flights/Australia Domestic Flights.ipynb
+++ b/Australia Flights/Australia Domestic Flights.ipynb
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
        "4  1984          1  1/1984  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,10 +470,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -526,7 +524,7 @@
        "      <td>19246</td>\n",
        "      <td>1984</td>\n",
        "      <td>1</td>\n",
-       "      <td>1984-01</td>\n",
+       "      <td>1984Q1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -542,7 +540,7 @@
        "      <td>4210</td>\n",
        "      <td>1984</td>\n",
        "      <td>1</td>\n",
-       "      <td>1984-01</td>\n",
+       "      <td>1984Q1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -558,7 +556,7 @@
        "      <td>1414</td>\n",
        "      <td>1984</td>\n",
        "      <td>1</td>\n",
-       "      <td>1984-01</td>\n",
+       "      <td>1984Q1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -574,7 +572,7 @@
        "      <td>4566</td>\n",
        "      <td>1984</td>\n",
        "      <td>1</td>\n",
-       "      <td>1984-01</td>\n",
+       "      <td>1984Q1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -590,7 +588,7 @@
        "      <td>1803</td>\n",
        "      <td>1984</td>\n",
        "      <td>1</td>\n",
-       "      <td>1984-01</td>\n",
+       "      <td>1984Q1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -611,22 +609,22 @@
        "3                  66.8              2619   7987950.0  11958009.0   4566   \n",
        "4                  88.5              1607   2564772.0   2898047.0   1803   \n",
        "\n",
-       "   Year  Month_num     Date  \n",
-       "0  1984          1  1984-01  \n",
-       "1  1984          1  1984-01  \n",
-       "2  1984          1  1984-01  \n",
-       "3  1984          1  1984-01  \n",
-       "4  1984          1  1984-01  "
+       "   Year  Month_num    Date  \n",
+       "0  1984          1  1984Q1  \n",
+       "1  1984          1  1984Q1  \n",
+       "2  1984          1  1984Q1  \n",
+       "3  1984          1  1984Q1  \n",
+       "4  1984          1  1984Q1  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data_1 = pd.to_datetime(data['Date'])\n",
-    "data['Date'] = pd.PeriodIndex(data_1, freq='M')\n",
+    "data['Date'] = pd.PeriodIndex(data_1, freq='Q')\n",
     "data[:5]"
    ]
   },
@@ -639,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -772,7 +770,7 @@
        "       WAGGA WAGGA  880808       2844  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -1076,7 +1074,7 @@
        "[5 rows x 74 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1122,7 @@
        "      dtype='object', name='Routes')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1208,7 @@
        "22  CANBERRA - MELBOURNE             323  1984"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,16 +1220,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x287efc11630>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x26ad388c978>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1265,13 +1263,220 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "time = pd.DataFrame(data, columns=['Routes', 'Aircraft_Trips', 'Year', 'Date'])\n",
     "time = time[time['Routes'].isin(imp_routes_1.index)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Routes                   object\n",
+       "Aircraft_Trips            int64\n",
+       "Year                      int64\n",
+       "Date              period[Q-DEC]\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Routes</th>\n",
+       "      <th>Aircraft_Trips</th>\n",
+       "      <th>Year</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1984Q1</th>\n",
+       "      <td>ADELAIDE - MELBOURNE</td>\n",
+       "      <td>711</td>\n",
+       "      <td>1984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1984Q1</th>\n",
+       "      <td>ADELAIDE - SYDNEY</td>\n",
+       "      <td>358</td>\n",
+       "      <td>1984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1984Q1</th>\n",
+       "      <td>BRISBANE - MELBOURNE</td>\n",
+       "      <td>324</td>\n",
+       "      <td>1984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1984Q1</th>\n",
+       "      <td>BRISBANE - SYDNEY</td>\n",
+       "      <td>990</td>\n",
+       "      <td>1984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1984Q1</th>\n",
+       "      <td>CANBERRA - MELBOURNE</td>\n",
+       "      <td>323</td>\n",
+       "      <td>1984</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Routes  Aircraft_Trips  Year\n",
+       "Date                                              \n",
+       "1984Q1  ADELAIDE - MELBOURNE             711  1984\n",
+       "1984Q1     ADELAIDE - SYDNEY             358  1984\n",
+       "1984Q1  BRISBANE - MELBOURNE             324  1984\n",
+       "1984Q1     BRISBANE - SYDNEY             990  1984\n",
+       "1984Q1  CANBERRA - MELBOURNE             323  1984"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time = time.set_index(['Date'])\n",
+    "time[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Routes</th>\n",
+       "      <th>Aircraft_Trips</th>\n",
+       "      <th>Year</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1984Q1</th>\n",
+       "      <td>ADELAIDE - MELBOURNE</td>\n",
+       "      <td>711</td>\n",
+       "      <td>1984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1984Q1</th>\n",
+       "      <td>ADELAIDE - SYDNEY</td>\n",
+       "      <td>358</td>\n",
+       "      <td>1984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1984Q1</th>\n",
+       "      <td>BRISBANE - MELBOURNE</td>\n",
+       "      <td>324</td>\n",
+       "      <td>1984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1984Q1</th>\n",
+       "      <td>BRISBANE - SYDNEY</td>\n",
+       "      <td>990</td>\n",
+       "      <td>1984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1984Q1</th>\n",
+       "      <td>CANBERRA - MELBOURNE</td>\n",
+       "      <td>323</td>\n",
+       "      <td>1984</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Routes  Aircraft_Trips  Year\n",
+       "Date                                              \n",
+       "1984Q1  ADELAIDE - MELBOURNE             711  1984\n",
+       "1984Q1     ADELAIDE - SYDNEY             358  1984\n",
+       "1984Q1  BRISBANE - MELBOURNE             324  1984\n",
+       "1984Q1     BRISBANE - SYDNEY             990  1984\n",
+       "1984Q1  CANBERRA - MELBOURNE             323  1984"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
